--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,19 @@ python-dotenv>=1.0.0
 tqdm>=4.66.1
 backoff>=2.2.1
 
+# Database
+mongoengine>=0.27.0
+pymongo>=4.5.0
+
 # Testing
 pytest>=7.4.0
 pytest-cov>=4.1.0
+pytest-mongodb>=2.4.0
 
 # Type checking
 mypy>=1.5.1
 types-PyYAML>=6.0.12.12
+types-pymongo>=4.5.0.1
 
 # Logging
 rich>=13.5.2
