Update GitHub Issues Fetching to Focus on OpenAI Python Repository
This commit refactors the GitHub issues fetching process to:
- Change repository configuration to focus on OpenAI Python repository
- Add new command-line options for controlling comment fetching
- Update configuration to support optional comment inclusion
- Modify GitHub fetcher to fetch issue comments
- Restructure checkpoint and analysis core modules
- Update import paths and module organization

Key improvements include more flexible GitHub issues retrieval and simplified project structure.

--- a/config/repositories.yml
+++ b/config/repositories.yml
@@ -1,8 +1,4 @@
 # List of GitHub repositories to fetch issues from
 repositories:
-  - ethereum/solidity
-  - OpenZeppelin/openzeppelin-contracts
-  - ConsenSys/smart-contract-best-practices
-  - crytic/slither
-  - trailofbits/manticore
+  - openai/openai-python
   # Add more repositories as needed 
