--- a/.gitignore
+++ b/.gitignore
@@ -47,40 +47,15 @@ data/raw/*.json
 *.swp
 .DS_Store
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+# Logs and databases
+*.sqlite
+*.db
 
-# Virtual Environment
-venv/
-ENV/
+# Environment and configuration
+config.yaml
+*.env
+checkpoints/
+exports/
 
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# Project specific
-data/*.csv 
-data/analysis/*.json
-data/analysis/*.csv
+# OS
+Thumbs.db
