Remove obsolete documentation and update pipeline configuration
This commit deletes the `ENHANCED_PROMPT_SUMMARY.md`, `PROMPT_IMPROVEMENTS.md`, and `README_PIPELINE.md` files, which are no longer relevant to the current project structure. Additionally, the `pipeline_config.yaml` has been updated to disable GitHub data acquisition and enhance Stack Overflow settings, allowing for a broader range of questions and improved data quality. The `.DS_Store` file has also been updated to reflect the latest changes. These modifications aim to streamline the project and improve the clarity of the configuration settings.

--- a/pipeline_config.yaml
+++ b/pipeline_config.yaml
@@ -1,18 +1,28 @@
 sources:
   github:
-    enabled: true
+    enabled: false
     repositories:
+      # Core LLM provider repositories
       - owner: openai
         repo: openai-python
-    max_issues_per_repo: 10
-    days_back: 1000
+      - owner: openai
+        repo: openai-node
+      - owner: openai
+        repo: openai-cookbook
+      - owner: langchain-ai
+        repo: langchain
+    max_issues_per_repo: 10000
+    days_back: 1365
   stackoverflow:
     enabled: true
     tags:
+      # Focus on highest-signal tags only
       - openai-api
       - langchain
-    max_questions_per_tag: 10
-    days_back: 1000
+      - gpt-4
+      - chatgpt-api
+    max_questions_per_tag: 5000000
+    days_back: 1365
 
 deduplication:
   enabled: true
