Enhance data acquisition scripts with logging and configuration updates
This commit adds logging for filtering configurations in both GitHub and Stack Overflow data acquisition scripts to aid debugging. Additionally, the `pipeline_config.yaml` file has been updated to include a batch size for improved throughput and a reduced rate limit delay between API calls. These changes aim to enhance the efficiency and traceability of data acquisition processes.

--- a/pipeline_config.yaml
+++ b/pipeline_config.yaml
@@ -51,4 +51,6 @@ llm_screening:
   model: gpt-4.1
   temperature: 0.1
   max_tokens: 2000
-  provider: openai 
+  provider: openai
+  batch_size: 100                    # Increase batch size for better throughput
+  rate_limit_delay: 0.5              # Reduce delay between API calls 
